# tgateway

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: dependabot_automerge.yaml  pr_codeql.yaml  pr_dependency-review.yaml
examples/: fastapi_webhook.py  simple_cmd.py
examples/basic/: check_send_ability.py  check_verification_status.py  send_verification_message.py  validate_report_integrity.py
scripts/: lint-pre-commit.sh  lint.sh  publish.sh  static-analysis.sh  static-pre-commit.sh
tgateway/: __about__.py  __init__.py  __main__.py  client.py  constants.py  enums.py  exceptions.py  integrity.py  methods.py  types.py
tgateway/cli/: main.py
